--- a/rotative-militante/src/App.css
+++ b/rotative-militante/src/App.css
@@ -1,43 +1,18 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.button_sidebar_container {
+  height: 100%;
+  width: 12vh;
+  position: fixed;
+  left:0;
+  top:0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: red;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.ButtonSidebar {
+.button_sidebar {
   position: fixed;
   left: 0;
     list-style-type: none;
@@ -45,7 +20,12 @@
     margin: 0;
 }
 
-.ButtonIcon{
+.button {
+  height:12vh;
+  width:12vh;
+}
+
+.button_icon {
   height:8vh;
   width:8vh;
 }
