--- a/rotative-militante/pages/App.css
+++ b/rotative-militante/pages/App.css
@@ -58,3 +58,20 @@
 .button_format {
 
 }
+
+.grid{
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  gap: 10px;
+  width: 80%;
+  max-width: 600px;
+}
+
+.cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  padding: 20px;
+  border-radius: 5px;
+}
